--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     <div class="col-lg-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
                             <div class="blog-img">
-                                <img src="img/blog-1.jpg" alt="Blog">
+                                <img src="img/bg.jpg" alt="Blog">
                             </div>
                             <div class="blog-text">
                                 <h2>FaceBook Down Reason Behind - Blog</h2>
