--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                                 <p>I'm</p>
                                 <h1>Saran</h1>
                                 <h2></h2>
-                                <!--<div class="typed-text">Security researcher, Ethical Hacker, Coder, Penetration Tester, Bug Hunter</div>-->
-                                <h3>Pen-tester | UX/UI </h3>
+                                <div class="typed-text">Security researcher, Ethical Hacker, Coder, Penetration Tester, Bug Hunter</div>
+                                <!--<h3>Pen-tester | UX/UI </h3>-->
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="https://drive.google.com/u/0/uc?id=1LPiaI0luBIJTPfiDFG7E9BAZZcRViJ1L&export=download">My Resume</a>
